crates/pack/tests/compile_fail/fact_no_new.stderr
error[E0599]: no function or associated item named `construct_unchecked` found for struct `ContextFact` in the current scope
    --> tests/compile_fail/fact_no_new.rs:8:22
     |
   8 |         ContextFact::construct_unchecked(ContextKey::Seeds, "test-id", "test-content");
     |                      ^^^^^^^^^^^^^^^^^^^ function or associated item not found in `ContextFact`
     |
note: if you're trying to build a new `ContextFact` consider using one of the following associated functions:
      ContextFact::new_projection
      ContextFact::from_wire
    --> /Users/kpernyer/dev/reflective/stack/bedrock-platform/converge/crates/pack/src/fact.rs:1106:5
     |
1106 | /     pub fn new_projection<T>(
1107 | |         key: ContextKey,
1108 | |         id: impl Into<FactId>,
1109 | |         payload: T,
...    |
1113 | |     where
1114 | |         T: FactPayload + PartialEq,
     | |___________________________________^
...
1127 | /     pub fn from_wire(
1128 | |         wire: WireContextFact,
1129 | |         registry: &PayloadRegistry,
1130 | |     ) -> Result<Self, PayloadError> {
     | |___________________________________^
